--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -31,12 +31,12 @@
   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi_vrml_extensions.php\#section_ext_tex_coord_bounds}"
 }
 
-@misc{vrmleng:projectivetexturing,
-  title = "Projective texture mapping",
-  author = "Michalis Kamburelis",
-  year = "2010",
-  howpublished = "\url{http://vrmlengine.sourceforge.net/kambi_vrml_extensions_shadow_maps.php\#section_texture_projective}"
-}
+@Comment @misc{vrmleng:projectivetexturing,
+@Comment   title = "Projective texture mapping",
+@Comment   author = "Michalis Kamburelis",
+@Comment   year = "2010",
+@Comment   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi_vrml_extensions_shadow_maps.php\#section_texture_projective}"
+@Comment }
 
 @misc{ogre,
   title = "{OGRE - Open Source 3D Graphics Engine}",
